# CLS-CAD

./: .gitignore  .gitignore.bak  .pre-commit-config.yaml  .style.yapf  CITATION.cff  CLS-CAD.manifest  CLS-CAD.py  LICENSE  README.md  TODO.md  a.YnVzaW5lc3M6Y2hhdW1ldCNEMjAxOTA4MTQyMDg3NzMxNzY_urn-adsk.wipprod-fs.folder-co.E7Fo0V78SVux5exRVol-ig_urn-adsk.wipprod-dm.lineage-r0B29-dmRPi_YH8bi-Cptg.json  cad_inhab.py  config.py  parts.taxonomy  pyproject.toml
applications/cls-cad-backend/: .env  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  build.bat  build.sh  cls-cps.py  hypermapper_compatibility.py  main.py  pyproject.toml  repository_builder.py  requirements.txt  requirements_docker.txt  responses.py  schemas.py  set_json.py
applications/cls-cad-backend/.github/workflows/: build-publish-container.yml
applications/cls-cad-backend/Repositories/CAD/a.YnVzaW5lc3M6Y2hhdW1ldCNEMjAxOTA4MTQyMDg3NzMxNzY/urn-adsk.wipprod-fs.folder-co.E7Fo0V78SVux5exRVol-ig/: urn-adsk.wipprod-dm.lineage-r0B29-dmRPi_YH8bi-Cptg
applications/cls-cad-backend/app/api/: __init__.py
applications/cls-cad-backend/app/api/repository/: controller.py  dto.py  service.py  utils.py
applications/cls-cad-backend/app/api/user/: dto.py
applications/cls-cad-backend/app/auth/: __init__.py  controller.py  dto.py  service.py  utils.py
applications/cls-cad-backend/app/models/: repository.py  schemas.py  user.py
applications/cls-cad-backend/cls_cad_backend/: repository_builder.py  responses.py  schemas.py  server.py
applications/cls-cad-backend/cls_cad_backend/database/: commands.py
applications/cls-cad-backend/cls_cad_backend/hypermapper_tools/: hypermapper_compatibility.py  hypermapper_visualisation.py
applications/cls-cad-backend/cls_cad_backend/static/welcomePage/: index.html
applications/cls-cad-backend/cls_cad_backend/util/: BOMachine.py  BOStateMachine.py  hrid.py  json_operations.py  motion.py  mp_file_writers.py
applications/cls-cad-backend/cls_cps/: repository_builder.py  responses.py  schemas.py  server.py
applications/cls-cad-backend/cls_cps/cls_python/: cls_json.py
applications/cls-cad-backend/cls_cps/database/: commands.py
applications/cls-cad-backend/cls_cps/hypermapper_tools/: hypermapper_compatibility.py  hypermapper_visualisation.py
applications/cls-cad-backend/cls_cps/static/assembleResult/: index.html
applications/cls-cad-backend/cls_cps/static/assembleResult/assets/: index.7e81bdef.js
applications/cls-cad-backend/cls_cps/static/editTaxonomyGraph/: index.html
applications/cls-cad-backend/cls_cps/static/editTaxonomyGraph/css/: app.ccd75a65.css
applications/cls-cad-backend/cls_cps/static/welcomePage/: index.html
applications/cls-cad-backend/cls_cps/util/: json_operations.py  set_json.py
applications/cls-cad-backend/cls_python/: __init__.py  cls_json.py  debug_util.py  enumeration.py  fcl.py  subtypes.py  types.py
applications/cls-cad-backend/hypermapper_tools/: hypermapper_compatibility.py  hypermapper_visualisation.py
applications/cls-cad-backend/static/assembleResult/: index.html
applications/cls-cad-backend/static/assembleResult/assets/: index.13fd09c9.js  index.3bc8631b.js  index.3cfa5374.js  index.3f2d7c36.css  index.4529eb19.js  index.9372ddd8.css  index.c4d37d81.css  index.f5e44200.js  index.f9ae9349.css
applications/cls-cad-backend/static/assembleResult/static/: palette.js
applications/cls-cad-backend/static/editTaxonomyGraph/: index.html
applications/cls-cad-backend/static/editTaxonomyGraph/css/: app.54073d81.css  app.548ae6b9.css  app.5bce666a.css  app.730bebc0.css  app.f7affafe.css
applications/cls-cad-backend/static/editTaxonomyGraph/js/: app.04099f88.js  app.04099f88.js.map  app.56e88793.js.map  app.641dfe98.js  app.641dfe98.js.map  app.68f1e511.js  app.68f1e511.js.map  app.724f54b1.js  app.724f54b1.js.map  app.f7f5ca26.js  app.f7f5ca26.js.map  chunk-vendors.534293a1.js  chunk-vendors.534293a1.js.map  chunk-vendors.79627da0.js  chunk-vendors.79627da0.js.map  chunk-vendors.7b273191.js.map
applications/cls-cad-backend/static/selectType/: index.html
applications/cls-cad-backend/static/unrolledTaxonomyDisplay/: index.html
applications/cls-cad-backend/tests/: conftest.py  test_database.py  test_retrieve_results.py  test_synthesis.py  test_utils.py
applications/cls-cad-backend/util/: hrid.py
(+118 files in other folders)
