[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cls-cad"
version = "0.1.0"
description = "A project for synthesizing cyber-physical systems."
authors = ["Constantin Chaumet <constantin.chaumet@tu-dortmund.de>"]
readme = "README.md"
packages = [{include = "scripts", from="."}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^25"
flake8 = "^7"
isort = "^6"
pyright = "^1"
pytest = "^8"
pre-commit = "^4"

[tool.poetry.scripts]
setup = "scripts.setup_environment:setup"
