[tool.poetry]
name = "cls-cad-backend"
version = "0.1.0"
description = "A backend for synthesizing cyber-physical systems."
authors = ["Constantin Chaumet <constantin.chaumet@tu-dortmund.de>"]
readme = "README.md"
packages = [{include = "cls_cad_backend"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
picls = {git = "https://github.com/tudo-seal/picls-python.git", branch = "main"}
fastapi = "^0"
uvicorn = "^0"
pydantic = "^2"
pymongo = {extras = ["srv"], version = "3.13.0"}
montydb = {extras = ["bson"], version = "^2"}

[tool.poetry.group.cpython]
optional = true

[tool.poetry.group.cpython.dependencies]
ujson = "^5"
orjson = "^3"

[tool.poetry.group.hypermapper]
optional = true

[tool.poetry.group.hypermapper.dependencies]
hypermapper = "^2"
plotly = "^5"
pandas = "^1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
