[tool.poetry]
name = "cls-cad-backend"
version = "0.1.0"
description = "A backend for synthesizing cyber-physical systems."
authors = ["Constantin Chaumet <constantin.chaumet@tu-dortmund.de>"]
readme = "README.md"
packages = [{include = "cls_cad_backend"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
picls = {git = "https://github.com/tudo-seal/picls-python.git", branch = "main"}
fastapi = "^0"
uvicorn = "^0"
pydantic = "^2"
pymongo = {extras = ["srv"], version = "^4"}
montydb = {extras = ["bson"], version = "^2"}

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
montydb = {extras = ["lmdb"], version = "^2"}
lmdb = "^1"

[tool.poetry.group.cpython]
optional = true

[tool.poetry.group.cpython.dependencies]
ujson = "^5"
orjson = "^3"

[tool.poetry.group.hypermapper]
optional = true

[tool.poetry.group.hypermapper.dependencies]
hypermapper = "^2"
plotly = "^5"
pandas = "^2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"
pytest = "^7"
pytest-cov = "^4"
coverage = "^7"
pytest-dependency = "^0"
pytest-order = "^1"
httpx = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["__init__.py", "main.py", "conftest.py"]

ignore_errors = true
